// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider> Snapshots With min/max labels 1`] = `
<div
  className="ys-slider"
>
  <label
    className="ys-slider__label"
    htmlFor="slider-1"
  >
    <span
      className="ys-slider__label-text"
    >
      Rating
      <span
        className="ys-u-visuallyhidden"
      >
        (valgmulighederne er mellem 0/10 og 10/10)
      </span>
    </span>
    <span
      className="ys-slider__wrapper"
    >
      <span
        aria-hidden="true"
        className="ys-slider__minmax-label"
      >
        0/10
      </span>
      <span
        className="ys-slider__control-wrapper"
      >
        <input
          className="ys-slider__control"
          id="slider-1"
          max={10}
          min={0}
          onChange={[Function]}
          step={1}
          type="range"
          value={0}
        />
      </span>
      <span
        aria-hidden="true"
        className="ys-slider__minmax-label"
      >
        10/10
      </span>
    </span>
  </label>
</div>
`;

exports[`<Slider> Snapshots With optional props 1`] = `
<div
  className="ys-slider lizard"
>
  <label
    className="ys-slider__label"
    htmlFor="slider-1"
  >
    <span
      className="ys-slider__label-text"
    >
      Label
    </span>
    <span
      className="ys-slider__control-wrapper"
    >
      <input
        className="ys-slider__control"
        id="slider-1"
        max={100}
        min={0}
        onChange={[Function]}
        step={10}
        type="range"
        value={20}
      />
    </span>
  </label>
</div>
`;

exports[`<Slider> Snapshots With steps 1`] = `
<div
  className="ys-slider"
>
  <label
    className="ys-slider__label"
    htmlFor="slider-1"
  >
    <span
      className="ys-slider__label-text"
    >
      Starbucks sizes
      <span
        className="ys-u-visuallyhidden"
      >
        (valgmulighederne er Tall, Grande, Venti, Trenta)
      </span>
    </span>
    <span
      aria-hidden="true"
      className="ys-slider__data-set"
    >
      <SliderStep
        className=""
      >
        Tall
      </SliderStep>
      <SliderStep
        className=""
      >
        Grande
      </SliderStep>
      <SliderStep
        className=""
      >
        Venti
      </SliderStep>
      <SliderStep
        className=""
      >
        Trenta
      </SliderStep>
    </span>
    <span
      className="ys-slider__control-wrapper"
    >
      <input
        className="ys-slider__control"
        id="slider-1"
        max={4}
        min={1}
        onChange={[Function]}
        step={1}
        type="range"
        value={1}
      />
    </span>
  </label>
</div>
`;
